feat: edit training material
